Bug 31779 - [swrast] piglit array-texture regression
Summary: [swrast] piglit array-texture regression
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-19 15:30 UTC by Vinson Lee
Modified: 2010-11-22 21:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
array-texture.png (1.68 KB, image/png)
2010-11-19 15:30 UTC, Vinson Lee
Details

Description Vinson Lee 2010-11-19 15:30:30 UTC
Created attachment 40424 [details]
array-texture.png

mesa: 04ffbe1ac6a82ac5cce843afa15ffdfa4ef78103 (master)

Run piglit array-texture. The test now fails but previously passed.

$ ./bin/array-texture
Probe at (50,50)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 0.000000
array-texture: failed for 2D image/slice 1
Comment 1 Vinson Lee 2010-11-19 15:37:13 UTC
83e93b6008213ad86607027e8434ecaccc8b1a2c is the first bad commit
commit 83e93b6008213ad86607027e8434ecaccc8b1a2c
Author: Brian Paul <brianp@vmware.com>
Date:   Thu Nov 18 16:15:33 2010 -0700

    mesa: pass gl_format to _mesa_init_teximage_fields()
    
    This should prevent the field going unset in the future.  See bug
    http://bugs.freedesktop.org/show_bug.cgi?id=31544 for background.
    
    Also remove unneeded calls to clear_teximage_fields().
    
    Finally, call _mesa_set_fetch_functions() from the
    _mesa_init_teximage_fields() function so callers have one less
    thing to worry about.

:040000 040000 94bf29a3503716afafc4f9ceceb0274c38b220ef a2f2a5a39461461dbc65a12413a1ec7709ce8266 M	src
bisect run success
Comment 2 Brian Paul 2010-11-21 09:06:39 UTC
Fixed w/ commit 5e3733fadf08178fca7c9f20a0f4783f940383aa
Comment 3 Vinson Lee 2010-11-22 21:10:44 UTC
mesa: 9d08902457e9203e531689722120430bbcc4aeaf (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.